fix import, z-index for toast container

--- a/frontend/src/components/ui/toastsContainer/ToastsContainer.scss
+++ b/frontend/src/components/ui/toastsContainer/ToastsContainer.scss
@@ -11,5 +11,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column-reverse;
-  gap: 6px
+  gap: 6px;
+
+  z-index: 100;
 }
